manifests/ntfy/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
