manifests/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  type: ClusterIP
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
